secure_api.log
  File "/home/ec2-user/Capstone-Project/app_secure.py", line 1
    [PASTE THE ENTIRE CODE ABOVE]
           ^
SyntaxError: invalid syntax
